fix wrong width count

--- a/css/style.css
+++ b/css/style.css
@@ -333,6 +333,6 @@ footer{
     }
 
     main{
-        width: calc(100% - 70px);
+        width: calc(100% - 50px);
     }
 }
